--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,11 +286,19 @@ button:hover{
 
 
 /*--------------------------------------------------- Gallery ---------------------------------------------*/
+
+.gallery-container{
+    flex-direction:column;
+}
+
 .gallery{
     position: relative;
     padding:40px;
 }
 
+.gallery-title{
+    
+}
 .gallery img {
     width:100%;
     height:300px;
@@ -470,7 +478,6 @@ input:focus{
         width: 49.99999%;
         margin: 6px 0;
     }
-
 }
 
 /*---------------------------------------------Tablet size screen--------------------------------------------*/
