Fix - mobile menu items bunch up, margin set to fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -430,7 +430,7 @@ input:focus{
 
     .nav-link {
         text-align: right;
-        margin:0;
+        margin:20px;
         padding:0;
     }
 
