--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,6 +158,8 @@ button:hover{
 
 /*----------------------------------------------Home Page --------------------------------------------*/
 
+
+
 .parallax {
     background-image: url(../../assets/images/background.jpg);
     position: relative;
@@ -412,7 +414,7 @@ input:focus{
 }
 
 
-/*---------------------------------------------Responsive Screen sizes -----------------------------------------*/
+/*---------------------------------------------RESPONSIVE SCREEN SIZES -----------------------------------------*/
 
 /*********************************************************/
 
@@ -427,7 +429,6 @@ input:focus{
     .navbar {
         min-height: 80px;
     }
-
     .nav-link {
         text-align: right;
         margin:20px;
@@ -531,7 +532,7 @@ input:focus{
     }
 
     #prices-banner {
-        column-count: 1;
+        column-count: 2;
         font-size: 20px;
         margin-top: 50px;
         margin-left: auto;
@@ -621,10 +622,12 @@ input:focus{
     .image-container p{
         font-size: 20px;
     }
-    
+    #prices-banner {
+        column-count: 1;
+    }
     /*-----------------------Gallery page Media queries--------------------------*/
     
-    .responsive {
+    .responsive{
         width: 32.33%;
         height: 100px;
         margin-top: 3px;
