--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Holtwood+One+SC&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');
 
-/*----------------------------------------Header/Navigation-------------------------------------- */
+/*--------------------------------------Header/Navigation----*/
 
 #logo img {
     width: 250px;
@@ -69,7 +69,7 @@ a:active {
     color: inherit;
 }
 
-/*------------------------------------------------Footer----------------------------------------------- */
+/*--------------------------Footer------------------------------ */
 
 .footer-row {
     position: sticky;
@@ -179,7 +179,10 @@ button:hover {
     display: block;
 }
 
-/*----------------------------------------------Home Page --------------------------------------------*/
+.call-button-container form{
+    display:inline;
+}
+/*------------------Home Page ---------------------------------*/
 
 .parallax {
     background-image: url(../../assets/images/background.jpg);
@@ -221,6 +224,9 @@ button:hover {
     width: 40px;
 }
 
+.main-message p{
+    margin-bottom:0;
+}
 .main-message i {
     color: #eeb251;
 }
@@ -238,7 +244,7 @@ button:hover {
     font-size: 1.8rem;
 }
 
-.main-message span {
+.main-message form {
     position: absolute;
     height: 38px;
     left: 50%;
@@ -246,11 +252,13 @@ button:hover {
     bottom: 0;
 }
 
+.call
+
 .home-container i {
     margin: 6px;
 }
 
-/*--------------------------------------------------Prices page----------------------------------------- */
+/*-----------------------------Prices page----------------------------- */
 #prices-banner {
     column-count: 3;
     text-align: left;
@@ -310,7 +318,7 @@ button:hover {
     color: darkgray;
 }
 
-/*--------------------------------------------------- Gallery ---------------------------------------------*/
+/*-------------------------- Gallery ----------------------------*/
 
 .gallery-container {
     flex-direction: column;
@@ -349,7 +357,7 @@ I picked my least favourite dog picture */
     display: none;
 }
 
-/*----------------------------------------------- Contact page ---------------------------------------------*/
+/*------------------------- Contact page ------------------------------*/
 
 /*I used w3schools 'how to' section to help make the form. https://www.w3schools.com/howto/howto_css_contact_form.asp. */
 .form-container {
@@ -455,11 +463,11 @@ iframe{
 }
 
 
-/*---------------------------------------------RESPONSIVE SCREEN SIZES -----------------------------------------*/
+/*-----------------------------RESPONSIVE SCREEN SIZES ----------------------*/
 
 /*********************************************************/
 
-/*-------------------------------------------Small Desktop---------------------------------------*/
+/*-------------------------Small Desktop------------------------*/
 @media only screen and (max-width: 991px) {
 
     /*-----------------------Navbar Media queries--------------------------*/
@@ -511,7 +519,7 @@ iframe{
         font-size: 30px;
     }
 
-    /*-----------------------Prices page Media queries--------------------------*/
+    /*----------------Prices page Media queries--------------------------*/
     #prices-banner {
         column-count: 2;
         margin-left: auto;
@@ -527,7 +535,7 @@ iframe{
         margin-bottom: 30px;
     }
 
-    /*-----------------------Gallery page Media queries--------------------------*/
+    /*---------------Gallery page Media queries--------------------------*/
 
     .responsive {
         width: 49.99999%;
@@ -535,7 +543,7 @@ iframe{
     }
 }
 
-/*---------------------------------------------Tablet size screen--------------------------------------------*/
+/*------------------------Tablet size screen-------------------------*/
 @media only screen and (max-width: 768px) {
 
     /*-----------------------Footer Media queries--------------------------*/
@@ -558,7 +566,7 @@ iframe{
         display: none;
     }
 
-    /*-----------------------Home pages Media queries--------------------------*/
+    /*---------------Home pages Media queries--------------------------*/
 
     .home-container {
         flex-direction: column;
@@ -579,7 +587,7 @@ iframe{
         font-size: 30px;
     }
 
-    /*-----------------------Prices page Media queries--------------------------*/
+    /*----------------Prices page Media queries--------------------------*/
     #main-prices .row {
         margin-top: 8%;
     }
@@ -601,14 +609,14 @@ iframe{
         margin-bottom: 30px;
     }
 
-    /*-----------------------Gallery page Media queries--------------------------*/
+    /*-------------------Gallery page Media queries--------------------------*/
     .responsive {
         width: 49.99999%;
         margin: 6px 0;
     }
 }
 
-/*-------------------------------------------------Mobile size screen---------------------------------------*/
+/*-------------------------Mobile size screen---------------------------*/
 @media only screen and (max-width: 580px) {
 
     /*-----------------------Footer Media queries--------------------------*/
@@ -650,7 +658,7 @@ iframe{
         width: 90vw;
     }
 
-    /*-----------------------Prices page Media queries--------------------------*/
+    /*-----------------------Prices page Media queries----------------*/
     #main-prices .row {
         margin-top: 8%;
     }
@@ -680,7 +688,7 @@ iframe{
         column-count: 1;
     }
 
-    /*-----------------------Gallery page Media queries--------------------------*/
+    /*-------------------Gallery page Media queries--------------------------*/
 
     .responsive {
         width: 32.33%;
@@ -708,7 +716,7 @@ iframe{
         border: 0 solid transparent;
     }
 
-    /*-----------------------Contact page Media queries--------------------------*/
+    /*-------------------Contact page Media queries--------------------------*/
     .form-container {
         padding: 20px;
         width: 90%;
