--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 @import url('https://fonts.googleapis.com/css2?family=Holtwood+One+SC&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500&display=swap');
 
 *{
@@ -25,13 +32,19 @@
 .navbar {
     min-height: 100px;
     z-index: 991;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .nav-link {
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     font-size: 18px;
     font-family: "Holtwood One SC", sans-serif;
     margin-top: 20px;
@@ -77,11 +90,13 @@ a:active {
 /*--------------------------Footer------------------------------ */
 
 .footer-row {
+    position: -webkit-sticky;
     position: sticky;
     background-color: rgb(104, 110, 115);
     width: 100%;
     min-height: 70px;
-    box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
+    -webkit-box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
+            box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
 }
 
 #contact-details {
@@ -125,21 +140,28 @@ with my alterations to achieve the desired effect */
     text-decoration: none;
     vertical-align: middle;
     cursor: pointer;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
     min-width: 180px;
     margin: 0;
     position: relative;
     top: 60%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 2px 2px 11px 0 rgba(0, 0, 0, .5);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    -webkit-box-shadow: 2px 2px 11px 0 rgba(0, 0, 0, .5);
+            box-shadow: 2px 2px 11px 0 rgba(0, 0, 0, .5);
     padding: .375rem .75rem;
     font-size: 1rem;
     border-radius: .95rem;
 }
 
 .call-button:active {
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, .5);
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, .5);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, .5);
 }
 
 button:focus {
@@ -196,9 +218,14 @@ button:hover {
 }
 
 .home-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     width: 100%;
     min-height: calc(100vh - 165px);
 }
@@ -212,7 +239,8 @@ button:hover {
     font-size: 25px;
     padding: 2rem;
     width: 40%;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .main-message h1 {
@@ -260,8 +288,10 @@ button:hover {
 }
 
 /*-----------------------------Prices page----------------------------- */
-#prices-banner {
-    column-count: 3;
+.prices-banner {
+    -webkit-column-count: 3;
+       -moz-column-count: 3;
+            column-count: 3;
     text-align: left;
     margin-bottom: 50px;
     margin-left: auto;
@@ -273,20 +303,26 @@ button:hover {
     padding: 30px;
 }
 
-#prices-banner li {
+.prices-banner li {
     list-style-type: none;
     font-size: 20px;
 }
 
-#prices-banner .list-item {
+.prices-banner .list-item {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
 }
 
 /*Dog bone with "Prices" text */
 .image-container {
     position: relative;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     left: 0;
     right: 0;
     margin-left: auto;
@@ -304,25 +340,30 @@ button:hover {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     color: black;
     font-size: 35px;
     font-family: "Holtwood One SC", sans-serif;
     color: dimgrey;
 }
 
-#prices-banner span:nth-child(2) {
+.prices-banner span:nth-child(2) {
     color: pink;
 }
 
-#prices-banner i {
+.prices-banner i {
     color: darkgray;
 }
 
 /*-------------------------- Gallery ----------------------------*/
 
 .gallery-container {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 
 .gallery {
@@ -334,9 +375,11 @@ button:hover {
     width: 100%;
     height: 300px;
     margin-top: 10px;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     border-radius: 30px;
-    box-shadow: 0 0 16px #333;
+    -webkit-box-shadow: 0 0 16px #333;
+            box-shadow: 0 0 16px #333;
     z-index: 999;
     border: 2px solid transparent;
 }
@@ -348,8 +391,11 @@ button:hover {
 }
 
 .gallery img:hover {
-    box-shadow: 0 0 32px #333;
-    transform: scale(1.2);
+    -webkit-box-shadow: 0 0 32px #333;
+            box-shadow: 0 0 32px #333;
+    -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+            transform: scale(1.2);
 }
 
 /*I added this class to hide one of the photos on desktop size to ensure an even display of pictures on desktop v's mobile. 
@@ -373,7 +419,8 @@ I picked my least favourite dog picture */
     margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
-    box-shadow: 5px -2px 10px rgba(50, 50, 50, 0.75);
+    -webkit-box-shadow: 5px -2px 10px rgba(50, 50, 50, 0.75);
+            box-shadow: 5px -2px 10px rgba(50, 50, 50, 0.75);
 }
 
 .form-container label {
@@ -389,7 +436,8 @@ input:focus {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 20px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin-top: 1px;
     margin-bottom: 16px;
     resize: vertical;
@@ -407,14 +455,20 @@ input:focus {
     text-decoration: none;
     vertical-align: middle;
     cursor: pointer;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+        -ms-user-select: none;
+            user-select: none;
     min-width: 180px;
     margin: 20px 0;
     position: relative;
     top: 60%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    box-shadow: 2px 2px 11px 0 rgba(0, 0, 0, .5);
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    -webkit-box-shadow: 2px 2px 11px 0 rgba(0, 0, 0, .5);
+            box-shadow: 2px 2px 11px 0 rgba(0, 0, 0, .5);
     padding: .375rem .75rem;
     font-size: 1rem;
     border-radius: .95rem;
@@ -426,7 +480,8 @@ input:focus {
 }
 
 .submit-button:active {
-    box-shadow: 0 0 0 0 rgba(0, 0, 0, .5);
+    -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, .5);
+            box-shadow: 0 0 0 0 rgba(0, 0, 0, .5);
 }
 
 .submit-button:focus {
@@ -447,7 +502,8 @@ iframe{
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 20px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     margin-top: 1px;
     margin-bottom: 16px;
     resize: vertical;
@@ -518,7 +574,9 @@ iframe{
 
     /*----------------Prices page Media queries--------------------------*/
     #prices-banner {
-        column-count: 2;
+        -webkit-column-count: 2;
+           -moz-column-count: 2;
+                column-count: 2;
         margin-left: auto;
         margin-right: auto;
     }
@@ -566,7 +624,10 @@ iframe{
     /*---------------Home pages Media queries--------------------------*/
 
     .home-container {
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
     }
 
     .home-container .splash-image {
@@ -590,7 +651,9 @@ iframe{
     }
 
     #prices-banner {
-        column-count: 2;
+        -webkit-column-count: 2;
+           -moz-column-count: 2;
+                column-count: 2;
         font-size: 20px;
         margin-top: 50px;
         margin-left: auto;
@@ -678,7 +741,9 @@ iframe{
     }
 
     #prices-banner {
-        column-count: 1;
+        -webkit-column-count: 1;
+           -moz-column-count: 1;
+                column-count: 1;
     }
 
     /*-------------------Gallery page Media queries--------------------------*/
