--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
 
 /*--------------------------------------Header/Navigation----*/
 
-#logo img {
+.logo img {
     width: 250px;
     border: none;
     position: absolute;
@@ -51,11 +51,9 @@
     color: rgb(104, 110, 115);
     text-align: center;
     margin-left: 15px;
-    padding-bottom: 0
+    padding-bottom: 0;
 }
 
-/*Changed location of icon over menu items to remove the effect of dropping a few 
-pix when hoverered over. Menu items and icons are now in a fixed position*/
 .nav-item i {
     position: absolute;
     left: 0;
@@ -99,7 +97,7 @@ a:active {
             box-shadow: 0px -4px 3px rgba(50, 50, 50, 0.75);
 }
 
-#contact-details {
+.contact-details {
     font-family: "Roboto", sans-serif;
     color: white;
     margin-top: 10px;
@@ -108,7 +106,7 @@ a:active {
     position: relative;
 }
 
-#social-icons {
+.social-icons {
     font-size: 25px;
     margin-top: 15px;
     text-align: right;
@@ -116,18 +114,16 @@ a:active {
     position: relative;
 }
 
-#social-icons i {
+.social-icons i {
     margin-right: 10px;
 }
 
-#social-icons i:hover {
+.social-icons i:hover {
     color: #f5c2d4;
 }
 
-/* I initially went with a bootstrap button as I wanted to style t
-he button with a responsive shadow/no shadow effect to
-mimic the button being depressed. Below is the bootstrap CSS for their button
-with my alterations to achieve the desired effect */
+/* Below is the bootstrap CSS for their button
+with alterations to achieve 3d effect when clicked */
 
 .call-button {
     display: inline-block;
@@ -180,7 +176,7 @@ button:hover {
     top: 100%;
 }
 
-#contact-details span .fa-phone {
+.contact-details span .fa-phone {
     position: absolute;
     left: 170px;
     bottom: 40px;
@@ -188,12 +184,12 @@ button:hover {
     display: none;
 }
 
-#contact-details span:hover .fa-phone {
+.contact-details span:hover .fa-phone {
     display: block;
     text-decoration: none;
 }
 
-#contact-details span .fa-envelope {
+.contact-details span .fa-envelope {
     position: absolute;
     left: 205px;
     bottom: 13px;
@@ -201,12 +197,12 @@ button:hover {
     display: none;
 }
 
-#contact-details span:hover .fa-envelope {
+.contact-details span:hover .fa-envelope {
     display: block;
 }
 
 .call-button-container form{
-    display:inline;
+    display: inline;
 }
 /*------------------Home Page ---------------------------------*/
 
@@ -258,7 +254,7 @@ button:hover {
 }
 
 .main-message p{
-    margin-bottom:0;
+    margin-bottom: 0;
 }
 .main-message i {
     color: #eeb251;
@@ -307,10 +303,10 @@ button:hover {
         -moz-column-count: 3;
             column-count: 3;
 }
+
 .prices-banner li {
     list-style-type: none;
     font-size: 20px;
-    
 }
 
 .prices-banner .list-item {
@@ -333,21 +329,20 @@ button:hover {
 
 .prices-banner h1{
     color:#f5c2d4;
-    margin:20px;
+    margin: 20px;
     font-size: 30px; 
-    font-family:"Holtwood One SC", sans-serif;
+    font-family: "Holtwood One SC", sans-serif;
     text-align: center;
     margin-top: 12px;
 }
 
 .main-prices hr{
-    border:3px solid white;
-    width:80px;
-    margin:auto;
-    margin-bottom:20px;
-    border-radius:3px;
+    border: 3px solid white;
+    width: 80px;
+    margin: auto;
+    margin-bottom: 20px;
+    border-radius: 3px;
     margin-top: 13px;
-    
 }
 
 .services-banner {
@@ -355,61 +350,52 @@ button:hover {
     margin-bottom: 50px;
     margin-left: auto;
     margin-right: auto;
-    
-    margin-top: 30px;
+    margin-top: 40px;
     color:black;
-    background-color:rgb(255 255 255 / 87%);
+    background-color: rgb(255 255 255 / 0.87);
     border-radius: 60px;
     padding: 10px;
-    font-size:20px;
-    
+    font-size: 20px; 
 }
 
 .services-banner p{
     margin-right: 41px
-}
-.service-table{
-    column-count:4;
 }
 
 td:nth-child(1) p{
     color:#696969;
     text-align: left;
 }
+
 .services-banner .dogsize{
-    padding-bottom:20px;
-    color:green;
-    display:none;   
+    padding-bottom: 20px;
+    display: none;   
 }
 
 .services-banner h1{
     font-family: "Holtwood One SC", sans-serif;
     font-size: 30px;
-    margin-top:20px;
+    margin-top: 20px;
     color:#696969;
     text-align: center;
 }
 
-
 .services-banner hr{
-    border:3px solid #ffc0cb;
-    width:80px;
-    margin:auto;
-    border-radius:3px;
+    border: 3px solid #ffc0cb;
+    width: 80px;
+    margin: auto;
+    border-radius: 3px;
     margin-top: 13px;
-    
 }
 
 .services-banner i{
     color:saddlebrown;
-    padding:10px
+    padding: 10px
 }
 
 .price-row{
-    margin-right:0;
+    margin-right: 0;
 }
-
-
 
 /*-------------------------- Gallery ----------------------------*/
 
@@ -452,7 +438,7 @@ td:nth-child(1) p{
             transform: scale(1.2);
 }
 
-/*I added this class to hide one of the photos on desktop size to ensure an even display of pictures on desktop v's mobile. 
+/*Hides photos on desktop size to ensure an even display of pictures on desktop v's mobile. 
 I picked my least favourite dog picture */
 .hideforsymmetry {
     display: none;
@@ -532,8 +518,8 @@ input:focus {
     display: inline-block;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
-    background-color: #f8f9fa;
+    color:#212529;
+    background-color:#f8f9fa;
     text-align: center;
     border: none;
     text-decoration: none;
@@ -577,8 +563,8 @@ input:focus {
 }
 
 iframe{
-    width:100%;
-    overflow:hidden;
+    width: 100%;
+    overflow: hidden;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 20px;
@@ -587,14 +573,12 @@ iframe{
     margin-top: 1px;
     margin-bottom: 16px;
     resize: vertical;
-    outline:none;
-    border: 0px;
+    outline: none;
 }
 
 .map h1, p{
     text-align: center;
 }
-
 
 /*-----------------------------RESPONSIVE SCREEN SIZES ----------------------*/
 
@@ -604,7 +588,7 @@ iframe{
 @media only screen and (max-width: 991px) {
 
     /*-----------------------Navbar Media queries--------------------------*/
-    #logo img {
+    .logo img {
         width: 180px;
     }
 
@@ -642,7 +626,7 @@ iframe{
     .home-container .main-message {
         font-size: 20px;
         padding: 20px;
-        margin:16px;
+        margin: 16px;
     }
 
     .home-container {
@@ -653,7 +637,7 @@ iframe{
         font-size: 30px;
     }
     .main-message i {
-        margin-bottom:30px;
+        margin-bottom: 30px;
 }
 
     /*----------------Prices page Media queries--------------------------*/
@@ -697,11 +681,11 @@ iframe{
         margin-left: 10px;
     }
 
-    #contact-details span:hover i.fa-phone {
+    .contact-details span:hover i.fa-phone {
         display: none;
     }
 
-    #contact-details span:hover .fa-envelope {
+    .contact-details span:hover .fa-envelope {
         display: none;
     }
 
@@ -773,13 +757,13 @@ iframe{
         display: none;
     }
 
-    #contact-details {
+    .contact-details {
         text-align: center;
         margin-top: 5px;
         margin-left: 5px;
     }
 
-    #social-icons {
+    .social-icons {
         text-align: center;
         margin-top: 5px;
     }
@@ -859,6 +843,7 @@ iframe{
         padding: 10px;
         font-size: 13px;
     }
+    
     .services-banner p{
         margin-right:2px;
     }
