--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -225,7 +225,7 @@ button:hover {
         -ms-flex-align: center;
             align-items: center;
     -ms-flex-pack: distribute;
-        justify-content: space-around;
+        justify-content: space-evenly;
     width: 100%;
     min-height: calc(100vh - 165px);
 }
@@ -484,11 +484,10 @@ I picked my least favourite dog picture */
     font-family: "Roboto", sans-serif;
     font-size: 18px;
     padding: 20px;
-    width: 60%;
+    width: 800px;
+    margin:40px;
     margin-top: 60px;
     margin-bottom: 50px;
-    margin-left: auto;
-    margin-right: auto;
     -webkit-box-shadow: 5px -2px 10px rgba(50, 50, 50, 0.75);
             box-shadow: 5px -2px 10px rgba(50, 50, 50, 0.75);
 }
@@ -628,11 +627,7 @@ iframe{
         padding: 20px;
         margin: 16px;
     }
-
-    .home-container {
-        min-height: calc(100vh - 150px);
-    }
-
+    
     .home-container .main-message h1 {
         font-size: 30px;
     }
@@ -664,6 +659,21 @@ iframe{
         width: 49.99999%;
         margin: 6px 0;
     }
+
+    /*---------------Contact page Media queries--------------------------*/
+
+    .contact-page{
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+    
+    }
+    .form-container{
+        width:90vw;
+    }
+
+
 }
 
 /*------------------------Tablet size screen-------------------------*/
@@ -691,12 +701,9 @@ iframe{
 
     /*---------------Home pages Media queries--------------------------*/
 
-    .home-container {
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-            -ms-flex-direction: column;
-                flex-direction: column;
-    }
+   .form-container{
+        width: 90vw;
+   }
 
     .home-container .splash-image {
         margin-top: 20px;
@@ -741,11 +748,15 @@ iframe{
         margin-bottom: 30px;
     }
 
-    /*-------------------Gallery page Media queries--------------------------*/
+    /*-------------------Gallery Page Media Queries--------------------------*/
     .responsive {
         width: 49.99999%;
         margin: 6px 0;
     }
+
+    /*-------------------Contact Page Media Queries------------------------*/
+
+
 }
 
 /*-------------------------Mobile size screen---------------------------*/
@@ -843,7 +854,7 @@ iframe{
         padding: 10px;
         font-size: 13px;
     }
-    
+
     .services-banner p{
         margin-right:2px;
     }
