--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,7 +227,7 @@ button:hover {
     -ms-flex-pack: distribute;
         justify-content: space-evenly;
     width: 100%;
-    min-height: calc(100vh - 165px);
+    min-height: calc(100vh - 170px);
 }
 
 .main-message {
@@ -622,6 +622,9 @@ iframe{
         width: 500px
     }
 
+    .home-container{
+        min-height: calc(100vh - 150px);
+    }
     .home-container .main-message {
         font-size: 20px;
         padding: 20px;
@@ -720,6 +723,10 @@ iframe{
         font-size: 30px;
     }
 
+    .index-page {
+        flex-direction: column;
+    }
+    
     /*----------------Prices page Media queries--------------------------*/
     .main-prices .row {
         margin-top: 8%;
