Change to container class for better sizing on large screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -609,8 +609,15 @@ iframe{
     outline: none;
 }
 
-.map h1, p{
+.map h2, p{
     text-align: center;
+}
+
+.form-container h2{
+    text-align: center;
+    margin-bottom:20px;
+    font-family: "Holtwood One SC", sans-serif;
+    color:#615555;
 }
 
 /*-----------------------------RESPONSIVE SCREEN SIZES ----------------------*/
@@ -767,9 +774,9 @@ iframe{
     }
 
     .prices-column {
-        -webkit-column-count: 2;
-            -moz-column-count: 2;
-                column-count: 2;
+        -webkit-column-count: 1;
+            -moz-column-count: 1;
+                column-count: 1;
         font-size: 20px;
         margin-top: 50px;
         margin-left: auto;
@@ -945,4 +952,9 @@ iframe{
         padding: 20px;
         width: 90%;
     }
+
+.form-container h2{
+    font-size: 24px;
+    margin-top:10px;
+}
 }
